--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-      <script src="https://cdn.jsdelivr.net/npm/gifler@0.1.0/gifler.min.js"></script>
+<!--      <script src="https://cdn.jsdelivr.net/npm/gifler@0.1.0/gifler.min.js"></script>-->
     <%- injectScript %>
   </head>
   <body>
